<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_btn_find">Find</string>
    <string name="hnt_et_location">Enter location</string>
    <string name="str_rb_normal">Normal</string>
    <string name="str_rb_satellite">Satellite</string>
    <string name="str_rb_terrain">Terrain</string>

</resources>
