<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
 
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/str_btn_find" />

        <EditText
            android:id="@+id/et_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/btn_find"
            android:hint="@string/hnt_et_location"
            android:inputType="text" />

        <RadioGroup
            android:id="@+id/rg_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/str_rb_normal" />

            <RadioButton
                android:id="@+id/rb_satellite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_rb_satellite" />

            <RadioButton
                android:id="@+id/rb_terrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_rb_terrain" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/traffic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/et_location"
            android:text="Traffic" />

    </RelativeLayout>
 
 <fragment
     android:id="@+id/map"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     class="com.google.android.gms.maps.SupportMapFragment" />
 
</LinearLayout>